--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- animation -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!-- Custom css -->
     <link rel="stylesheet" href="css/style1.css">
@@ -16,7 +18,7 @@
 </head>
 
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid py-3">
 
 
 
@@ -26,7 +28,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler ms-auto btn-color" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,16 +36,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto me-5 mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shop</a>
+                            <a class="nav-link text-light" href="#">Shop</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">News</a>
+                            <a class="nav-link text-light" href="#">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link text-light" href="#">Contact</a>
                         </li>
                     </ul>
                     <button class="btn px-4 py-1 btn-color">
@@ -52,31 +54,272 @@
                 </div>
             </div>
         </nav>
-        <section class="container d-grid mt-5 py-4">
-            <div class="row">
-                <div class="col-md-6 d-flex flex-column pt-5">
-                    <p class="text-white-50">Computer-controlled digital transistorized with electronic advance</p>
-                    <h1 class="text-white">Honda CBR 300R</h1>
-                    <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab sed laudantium possimus doloribus qui
-                        voluptatem, quas suscipit in laboriosam, architecto provident ad voluptas vitae sapiente eos nisi
-                        repudiandae, accusamus dicta.</p>
+        <section class="container d-grid mt-lg-5 pb-md-3">
+            <div class="row g-4">
+                <div class="col-md-6 pt-5">
+                    <p class="text-white-50 mb-1">Computer-controlled digital transistorized with electronic advance</p>
+                    <h1 class="text-white fw-bold mb-3">Honda CBR 300R</h1>
+                    <p class="text-white-50">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                        Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
                     <button class="btn btn-color py-2 px-5 me-auto">Purchase</button>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/header-bike.png"class="img-fluid" alt="">
+                    <img src="images/header-bike.png" class=" img-fluid" alt="">
                 </div>
             </div>
         </section>
     </header>
     <main>
 
+
+
+        <!-- collection bikes -->
+
+
+
+
+        <section class="container my-5 d-flex flex-column align-items-center">
+            <h1 class="fw-bold mt-5 mb-1">Featured Bikes 2<span class="special-text-color">0</span>21</h1>
+            <span class="special-text-color">Best bike collection</span>
+            <hr class="mt-1 mb-5">
+            <div class="row container-fluid px-0">
+                <div class="col-md-4 gy-3">
+                    <div class="card border-0">
+                        <div class="card-body d-flex justify-content-center">
+                            <img src="images/feature-bike.jpg" class="img-fluid gray-img collection-img" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 gy-3">
+                    <div class="card border-0">
+                        <div class="card-body d-flex justify-content-center">
+                            <img src="images/feature-bike.jpg" class="img-fluid collection-img" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 gy-3">
+                    <div class="card border-0">
+                        <div class="card-body d-flex justify-content-center">
+                            <img src="images/feature-bike.jpg" class="img-fluid gray-img collection-img" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+        <!-- bike-card -->
+
+
+
+
+        <section class="container my-5 d-flex flex-column align-items-center">
+            <h1 class="fw-bold my-5">latest News</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <img src="images/bike-1.png" class="card-img-top p-3" alt="...">
+                        <div class="card-body">
+                            <h4 class="card-title">Ducati XDIAVEL S-73</h4>
+                            <p class="card-text fw-light mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Accusantium
+                                perspiciatis ducimus perferendis ipsa ad autem voluptate minima, inventore sint possimus
+                                alias qui nulla, suscipit in quia necessitatibus molestiae quis corrupti?</p>
+                        </div>
+                        <div class="card-footer bg-white border-0"> <button class="btn btn-color">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <img src="images/bike-2.png" class="card-img-top p-3" alt="...">
+                        <div class="card-body">
+                            <h4 class="card-title">Motorcycles & Scooters </h4>
+                            <p class="card-text fw-light mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Rerum magni
+                                amet suscipit quisquam dolor? Quae, nobis nam totam, commodi porro sapiente magni
+                                similique natus laudantium vero saepe laboriosam asperiores. Perferendis.</p>
+                        </div>
+                        <div class="card-footer bg-white border-0"> <button class="btn btn-color unactive">Read
+                                More</button></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <img src="images/bike-3.png" class="card-img-top p-3" alt="...">
+                        <div class="card-body">
+                            <h4 class="card-title">2021 Honda CBR500R</h4>
+                            <p class="card-text fw-light mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Dicta numquam,
+                                explicabo quasi, saepe laborum cupiditate provident consectetur sint vel molestias
+                                doloribus ipsum natus ut excepturi sit, atque minus nulla. Culpa.</p>
+                        </div>
+                        <div class="card-footer bg-white border-0"> <button class="btn btn-color unactive">Read
+                                More</button></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+        <!-- happy client -->
+
+
+
+        <section class="container my-5 d-flex flex-column align-items-center">
+            <h1 class="fw-bold my-5">Happy <span class="special-text-color">Clients Says</span></h1>
+            <div class="row row-cols-1 row-cols-md-3 g-5 mx-4">
+                <div class="col">
+                    <div class="card h-100 d-flex align-items-center justify-content-center">
+                        <img src="images/user-1.png" class="user-width rounded-circle my-4" alt="...">
+                        <div class="card-body d-flex flex-column align-items-center">
+                            <p class="card-text text-center">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</p>
+                            <div>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="far fa-star icon-color"></i>
+                            </div>
+                            <h5 class="text-primary my-3">Regina Miles</h5>
+                            <h6 class="mt-2 mb-4">Banker</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 d-flex align-items-center justify-content-center">
+                        <img src="images/user-2.png" class="user-width rounded-circle my-4" alt="...">
+                        <div class="card-body d-flex flex-column align-items-center">
+                            <p class="card-text text-center">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</p>
+                            <div>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="far fa-star icon-color"></i>
+                            </div>
+                            <h5 class="text-primary my-3">Regina Miles</h5>
+                            <h6 class="mt-2 mb-4">Banker</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 d-flex align-items-center justify-content-center">
+                        <img src="images/user-3.jpg" class="user-width rounded-circle my-4" alt="...">
+                        <div class="card-body d-flex flex-column align-items-center">
+                            <p class="card-text text-center">Slate helps you see how
+                                many more days you need
+                                to work to reach your financial
+                                goal for the month and year.</p>
+                            <div>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="fas fa-star icon-color"></i>
+                                <i class="far fa-star icon-color"></i>
+                            </div>
+                            <h5 class="text-primary my-3">Regina Miles</h5>
+                            <h6 class="mt-2 mb-4">Banker</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
+
+
+
+        <!-- FAQ -->
+
+
+
+
+        <section>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Accordion Item #1
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Accordion Item #2
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
+                            the collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Accordion Item #3
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
     </footer>
+
+    <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/5e73da3829.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
