--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="row g-4">
                 <div class="col-md-6 pt-5">
                     <p class="text-white-50 mb-1">Computer-controlled digital transistorized with electronic advance</p>
-                    <h1 class="text-white fw-bold mb-3">Honda CBR 300R</h1>
+                    <h1 class="banner-heading mb-3">Honda CBR 300R</h1>
                     <p class="text-white-50">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
                         Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                     </p>
@@ -277,8 +277,9 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingTwo">
-                                    <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    <button class="accordion-button fw-bold collapsed" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                                        aria-controls="collapseTwo">
                                         How can I tell if my helmet is old and I need a
                                         new one?
                                     </button>
@@ -297,8 +298,8 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingThree">
-                                    <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseThree" aria-expanded="false"
+                                    <button class="accordion-button fw-bold collapsed" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
                                         aria-controls="collapseThree">
                                         My bike has been in storage is it safe to ride?
                                     </button>
@@ -317,8 +318,8 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="headingThree">
-                                    <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseFour" aria-expanded="false"
+                                    <button class="accordion-button fw-bold collapsed" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
                                         aria-controls="collapseThree">
                                         What rules should I follow when riding my bike?
                                     </button>
@@ -348,8 +349,24 @@
 
 
 
-        <section>
-
+        <section class="container contact-bg my-5 p-5">
+            <h1 class="fw-bold mb-5 text-center">Contact</h1>
+            <form>
+                <div class="mb-3">
+                    <label for="" class="form-label">Name</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="" class="form-label">Massage</label>
+                    <textarea name="" id="" cols="30" rows="10" class="form-control"></textarea>
+                </div>
+                <button type="submit" class="btn btn-color">Submit</button>
+            </form>
         </section>
     </main>
     <footer>
