--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
                 </div>
             </div>
         </nav>
+
+
+
+
+
+
+
+
+        <!-- banner -->
+
+
+
+
+
+
+
+
         <section class="container d-grid mt-lg-5 pb-md-3">
             <div class="row g-4">
                 <div class="col-md-6 pt-5">
@@ -62,12 +79,46 @@
                     <p class="text-white-50">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
                         Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                     </p>
-                    <button class="btn btn-color py-2 px-5 me-auto">Purchase</button>
+
+
+
+                    <!-- Button trigger modal -->
+
+
+
+                    <button type="button" class="btn btn-color py-2 px-5" data-bs-toggle="modal" data-bs-target="#modelId">
+                        Purchase
+                    </button>
+                    
+
+
+                    <!-- Modal -->
+
+
+
+                    <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                    <div class="modal-header">
+                                            <h5 class="modal-title">Modal title</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                <div class="modal-body">
+                                    <div class="container-fluid">
+                                        Add rows here
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                    
                 </div>
                 <div class="col-md-6">
                     <img src="images/header-bike.png" class=" img-fluid" alt="">
                 </div>
-            </div>
         </section>
     </header>
     <main>
@@ -124,10 +175,14 @@
                         <img src="images/bike-1.png" class="card-img-top p-3" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Ducati XDIAVEL S-73</h4>
-                            <p class="card-text fw-light mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                Accusantium
-                                perspiciatis ducimus perferendis ipsa ad autem voluptate minima, inventore sint possimus
-                                alias qui nulla, suscipit in quia necessitatibus molestiae quis corrupti?</p>
+                            <p class="card-text mt-3">Ducati renews the XDiavel range by introducing two new
+                                versions for 2021: the XDiavel Dark and the XDiavel Black Star.
+
+                                XDiavel, the Ducati cruiser that combines the best of both worlds, is renewed, still
+                                remaining true to its philosophy.
+
+                                The new sports version, the Black Star, and the matt black total look version, the
+                                XDiavel Dark, further enhance the strengths of the XDiavel.</p>
                         </div>
                         <div class="card-footer bg-white border-0"> <button class="btn btn-color">Read More</button>
                         </div>
@@ -138,7 +193,7 @@
                         <img src="images/bike-2.png" class="card-img-top p-3" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Motorcycles & Scooters </h4>
-                            <p class="card-text fw-light mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            <p class="card-text  mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Rerum magni
                                 amet suscipit quisquam dolor? Quae, nobis nam totam, commodi porro sapiente magni
                                 similique natus laudantium vero saepe laboriosam asperiores. Perferendis.</p>
@@ -152,7 +207,7 @@
                         <img src="images/bike-3.png" class="card-img-top p-3" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">2021 Honda CBR500R</h4>
-                            <p class="card-text fw-light mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            <p class="card-text mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Dicta numquam,
                                 explicabo quasi, saepe laborum cupiditate provident consectetur sint vel molestias
                                 doloribus ipsum natus ut excepturi sit, atque minus nulla. Culpa.</p>
@@ -349,7 +404,7 @@
 
 
 
-        <section class="container contact-bg my-5 p-5">
+        <section class="container contact-bg mb-5 p-5">
             <h1 class="fw-bold mb-5 text-center">Contact</h1>
             <form>
                 <div class="mb-3">
@@ -359,7 +414,8 @@
                 <div class="mb-3">
                     <label for="" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.</div>
+                    <div id="emailHelp" class="form-text text-light">We'll never share your email with anyone else.
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="" class="form-label">Massage</label>
@@ -370,6 +426,7 @@
         </section>
     </main>
     <footer>
+        
 
     </footer>
 
