--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
 
 
 
-    <footer class="container-fluid d-flex align-items-center justify-content-center">
+    <footer class="container d-flex align-items-center justify-content-center">
         <P class="text-dark">©copyright Hsb-group 2021</P>
     </footer>
 
