--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/header-bike.png" class="animate__animated animate__fadeInRight img-fluid" alt="">
+                    <img src="images/header-bike.png" class="animate__animated animate__bounceInUp img-fluid" alt="">
                 </div>
         </section>
     </header>
